crates/gridwell-writer-latex/tests/snapshots/snapshots__minimal-1x1.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{l}
\toprule
Value \\
\midrule
Hello \\
\bottomrule
\end{tabular}
