crates/gridwell-writer-latex/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{l}
\toprule
Message \\
\midrule
\begin{tabular}[t]{@{}l@{}}Status: \textcolor[HTML]{E67E22}{\textbf{degraded}}\\Retry advised\textsuperscript{†}\end{tabular} \\
\bottomrule
\end{tabular}

\textsuperscript{†} See runbook section 4.\\
