crates/gridwell-writer-latex/tests/snapshots/snapshots__mixed-spans.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{lll}
\toprule
A & B & C \\
\midrule
\multicolumn{2}{l}{\multirow{2}{*}{2x2 block}} & top-right \\
\multicolumn{2}{l}{} & mid-right \\
x & y & z \\
\bottomrule
\end{tabular}
