crates/gridwell-writer-latex/tests/snapshots/snapshots__narrow-wide-mix.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{p{30pt}l}
\toprule
\# & Description \\
\midrule
1 & A long descriptive line of text. \\
2 & Another spanning description here. \\
\bottomrule
\end{tabular}
