crates/gridwell-writer-latex/tests/snapshots/snapshots__nested-spanners.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{llll}
\toprule
\multicolumn{2}{c}{Group A} & \multicolumn{2}{c}{Group B} \\
A1 & A2 & B1 & B2 \\
\midrule
1 & 2 & 3 & 4 \\
5 & 6 & 7 & 8 \\
\bottomrule
\end{tabular}
