crates/gridwell-writer-latex/tests/snapshots/snapshots__no-header.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
a & b \\
c & d \\
\bottomrule
\end{tabular}
