crates/gridwell-writer-latex/tests/snapshots/snapshots__raw-html.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{ll}
\toprule
Kind & Rendered \\
\midrule
bold+italic &  \\
\bottomrule
\end{tabular}
